fix bugs delete moving drawables out of range transfer z-index: 10 delete user drawables when remove CargoHold take 0 item

--- a/client/src/components/Game.css
+++ b/client/src/components/Game.css
@@ -98,6 +98,7 @@
 
 .transfer-background {
     background-color: #242424;
+    z-index: 10;
 }
 
 .no-cursor {
